--- a/style.css
+++ b/style.css
@@ -1,4 +1,166 @@
 *{
 	margin: 0px;
 	padding: 0px;
+	border: 0px;
 }
+
+#background{
+	position: relative;
+	width: 100%;
+	height: 735px;
+	background-image: url("./images/hogwarts.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+#ron{
+	position: absolute;
+	width: 200px;
+	height: 130px;
+	top: 40px;
+	left: 20px;
+	animation-name: ron;
+	animation-duration: 10s;
+	animation-iteration-count: 1;
+
+}
+
+@keyframes ron{
+	0%{
+		left: 0%;
+	}
+	100%{
+		left: 100%;
+	}
+}
+
+#snitch{
+	position: absolute;
+	width: 70px;
+	height:50px;
+	top: 60px;
+	left:220px;
+	animation-name: snitch;
+	animation-duration: 9s;
+	animation-iteration-count: 1;
+}
+
+@keyframes snitch{
+	0%{
+		left: 10%;
+	}
+	100%{
+		left: 100%;
+	}
+}
+
+#stars{
+	position: absolute;
+	width: 200px;
+	height: 250px;
+	top: 10px;
+	left:1300px;
+	animation-name: star;
+	animation-duration: 7s;
+	animation-iteration-count: 1;
+}
+
+@keyframes star{
+	0%{}
+
+	100%{
+		top: 500px;
+	    left:500px;
+	}
+}
+
+#boat{
+	position: absolute;
+	width: 100px;
+	height: 90px;
+	top: 600px;
+	left:1000px;
+	animation-name: boat;
+	animation-duration: 10s;
+	animation-iteration-count: 1;
+}
+
+@keyframes boat{
+	0%{
+	}
+
+	100%{
+	    left:400px;
+	}
+}
+
+#title{
+	position: absolute;
+	width: 0px;
+	height: 0px;
+	top: 100px;
+	left:500px;
+	animation-name: title;
+	animation-duration: 13s;
+	animation-iteration-count: 1;
+}
+
+@keyframes title{
+	20%{
+		width: 0px;
+	    height: 0px;
+	    top: 200px;
+	    left:800px;
+	}
+
+	100%{
+		width: 550px;
+	    height: 200px;
+	}
+}
+
+#bird{
+	position: absolute;
+	width: 400px;
+	height: 400px;
+	top: 300px;
+	left:10px;
+	animation-name: bird;
+	animation-duration: 9s;
+	animation-iteration-count: 1;
+}
+
+@keyframes bird{
+	0%{}
+
+	100%{
+		top: 0px;
+	    left:200px;
+	}
+}
+
+
+	
+#owl{
+	position: absolute;
+	width: 100px;
+	height: 85px;
+	bottom: 20px;
+	right:20px;
+	animation-name: owl;
+	animation-duration: 10s;
+	animation-iteration-count:1;
+}
+
+@keyframes owl{
+	0%{
+		right: 0%;
+	}
+	100%{
+		right: 100%;
+		bottom:300px;
+	}
+}
+
+
